Add WebDriver para tentiva de solução de bloqueio